@@ -1,6 +1,7 @@
 0.5
 
 Output exiftool version
+Only require the path to the extracted facebook download now
 
 0.4
 
